Use Java 17 API